kubernetes/main/apps/database/cloudnative-pg/cluster/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  namespace: database
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "postgres.lumu.au"
    io.cilium/lb-ipam-ips: 10.88.0.47
spec:
  type: LoadBalancer
  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    cnpg.io/cluster: postgres16
    role: primary
