kubernetes/main/apps/database/cloudnative-pg/cluster/networkpolicy.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "postgres-allow-ingress"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg-cluster
  ingress:
  - fromEntities:
    - "world"
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
